--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./public/favicon.png">
 
-    <!-- Page data -->
-    <title>Nyxtrackers</title>
-    <meta name="description" content="Page details">
-    <meta name="keywords" content="keyword1, keyword2, keyword3">
-    <meta name="author" content="Dari Developer">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./public/favicon.png">
+
+  <!-- Page data -->
+  <title>Nyxtrackers</title>
+  <meta name="description" content="Page details">
+  <meta name="keywords" content="keyword1, keyword2, keyword3">
+  <meta name="author" content="Dari Developer">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@600&family=Overpass:ital,wght@0,600;1,400&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
