meta: tags, description, logo and favicon

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="icon" type="image/x-icon" href="./public/favicon.png">
 
   <!-- Page data -->
-  <title>Nyxtrackers</title>
-  <meta name="description" content="Page details">
-  <meta name="keywords" content="keyword1, keyword2, keyword3">
+  <title>NYX Trackers - Landing page</title>
+  <meta name="description" content="Nyxtrackers is an online store, focused on manufacturing FBT trackers for virtual reality based on the SlimeVR OpenSource design. Its main objective is to offer customized tracker sets with a big focus on build quality and professional standards for the electronic components while maintaining a low enough price to be competitive.">
+  <meta name="keywords" content="Nyxtrackers, Virtual reality, games, electronics, VrChat, Full body tracking, FBT, Trackers, Store">
   <meta name="author" content="Dari Developer">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
