feat (alert) alert after load

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="keywords" content="Nyxtrackers, Virtual reality, games, electronics, VrChat, Full body tracking, FBT, Trackers, Store">
   <meta name="author" content="Dari Developer">
 
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
