feat (index): add google analytics

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
   <!-- Page data -->
   <title>NYX Trackers - Landing page</title>
-  <meta name="description" content="Nyxtrackers is an online store, focused on manufacturing FBT trackers for virtual reality based on the SlimeVR OpenSource design. Its main objective is to offer customized tracker sets with a big focus on build quality and professional standards for the electronic components while maintaining a low enough price to be competitive.">
-  <meta name="keywords" content="Nyxtrackers, Virtual reality, games, electronics, VrChat, Full body tracking, FBT, Trackers, Store">
+  <meta name="description"
+    content="Nyxtrackers is an online store, focused on manufacturing FBT trackers for virtual reality based on the SlimeVR OpenSource design. Its main objective is to offer customized tracker sets with a big focus on build quality and professional standards for the electronic components while maintaining a low enough price to be competitive.">
+  <meta name="keywords"
+    content="Nyxtrackers, Virtual reality, games, electronics, VrChat, Full body tracking, FBT, Trackers, Store">
   <meta name="author" content="Dari Developer">
 
   <!-- Fonts -->
@@ -19,6 +21,16 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@600&family=Overpass:ital,wght@0,600;1,400&display=swap"
     rel="stylesheet">
+
+  <!--  Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8E38GZ4RTH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8E38GZ4RTH');
+  </script>
 </head>
 
 <body>
