chore (index): ipdate title

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
   <!-- Page data -->
-  <title>NYX Trackers - Landing page</title>
+  <title>Nyxtrackers - SlimeVR Store</title>
   <meta name="description"
     content="Nyxtrackers is an online store, focused on manufacturing FBT trackers for virtual reality based on the SlimeVR OpenSource design. Its main objective is to offer customized tracker sets with a big focus on build quality and professional standards for the electronic components while maintaining a low enough price to be competitive.">
   <meta name="keywords"
