--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Page data -->
   <title>Nyxtrackers - SlimeVR Store</title>
   <meta name="description"
-    content="Nyxtrackers is an online store, focused on manufacturing FBT trackers for virtual reality based on the SlimeVR OpenSource design. Its main objective is to offer customized tracker sets with a big focus on build quality and professional standards for the electronic components while maintaining a low enough price to be competitive.">
+    content="Nyxtrackers is an online store specializing in FBT trackers for virtual reality, based on the SlimeVR OpenSource design. Buy SlimeVR trackers here; we offer high-quality, customizable sets with professional-grade components at competitive prices.">
   <meta name="keywords"
     content="Nyxtrackers, Virtual reality, games, electronics, VrChat, Full body tracking, FBT, Trackers, Store">
   <meta name="author" content="Dari Developer">
