feat (google-analytics): submit custom events

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   <script>
     window.dataLayer = window.dataLayer || []
     function gtag() { dataLayer.push(arguments) }
-    gtag('js', new Date())
-
+    gtag('js', new Date());
     gtag('config', 'G-8E38GZ4RTH');
   </script>
+
 </head>
 
 <body>
