feat (index): update meta data

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
   <!-- Page data -->
-  <title>Nyxtrackers - SlimeVR Store</title>
+  <title>Nyxtrackers SlimeVR-compatible trackers</title>
   <meta name="description"
-    content="Nyxtrackers is an online store specializing in FBT trackers for virtual reality, based on the SlimeVR OpenSource design. Buy SlimeVR trackers here; we offer high-quality, customizable sets with professional-grade components at competitive prices.">
+    content="Nyxtrackers is an online store specializing in FBT trackers for virtual reality, based on the SlimeVR OpenSource design. Buy Slimevr-Compatible trackers here; we offer high-quality, customizable sets with professional-grade components at competitive prices.">
   <meta name="keywords"
     content="Nyxtrackers, Virtual reality, games, electronics, VrChat, Full body tracking, FBT, Trackers, Store">
   <meta name="author" content="Dari Developer">
